web-infras/parser/tests/fixtures/babel/es2015/yield/parameter-default-inside-generator/output.txt
[SyntaxError]: yield expression can not used in parameter list (1,18)
1|function* fn(x = yield) {}
 |                ^
